# ema

./: .gitignore  CMakeLists.txt  LICENSE
.cache/clangd/index/: func.hpp.E5F83699D1F90B02.idx  scalar.hpp.8E50D00AD6D51700.idx  unit.cpp.B40A897FA7D9724A.idx  vec.hpp.8CBEACBEAA30572E.idx
ema/angle/: angle.hpp  const.hpp
ema/bivec/: bivec3.hpp
ema/concepts/types/: scalar.hpp
ema/mat/: func.hpp  mat.hpp
ema/rot/: func.hpp  rot3.hpp
ema/vec/: func.hpp  vec.hpp
math/concepts/: scalar.hpp
math/vec/: func.hpp  vec.hpp
tests/: CMakeLists.txt
tests/angle/: unit.cpp
tests/bivec/: unit.cpp
tests/mat/unit/: class.cpp  func.cpp
tests/vec/: unit.cpp
tests/vec/unit/: class.cpp  func.cpp
